# djjp-tests

./: LICENSE  README.md  pyproject.toml
djjp/: conftest.py  manage.py  pytest.ini
djjp/blah/: admin.py  apps.py  jobs.py  models.py  test_consumer.py  test_db_layer.py  test_default_jobs.py  test_jobs.py  test_scheduler.py  test_step.py
djjp/blah/management/commands/: check_jobs.py  make_tasks.py  run_consumer.py
djjp/blah/migrations/: 0001_initial.py
djjp/djjp/: asgi.py  settings.py  urls.py  wsgi.py
